refactor: 重新调整了代码结构,修改了模型名称(model+ip)
